Fix: Added spacing between CRM icons and connected icon and Aligned CRM Icons (#7757)
* Added spacing between CRM icon and connected div

* Aligned CRM icons

* Added suggested changes

--- a/phytoplankton-console/src/pages/alert-item/components/AlertDetails/AlertDetailsTabs/index.module.less
+++ b/phytoplankton-console/src/pages/alert-item/components/AlertDetails/AlertDetailsTabs/index.module.less
@@ -11,5 +11,17 @@
   height: 0.5rem;
   width: 0.5rem;
   border-radius: 50%;
+  margin-left: 0.15rem;
   background-color: @fr-colors-connected;
+}
+
+.crmIcon {
+  width: 16px;
+  height: 16px;
+  vertical-align: text-bottom;
+  display: inline-block;
+
+  svg {
+    display: block;
+  }
 }
