--- a/phytoplankton-console/src/pages/case-management-item/CaseDetails/index.module.less
+++ b/phytoplankton-console/src/pages/case-management-item/CaseDetails/index.module.less
@@ -10,6 +10,18 @@
 .connected {
   height: 0.5rem;
   width: 0.5rem;
+  margin-left: 0.15rem;
   border-radius: 50%;
   background-color: @fr-colors-connected;
+}
+
+.crmIcon {
+  width: 16px;
+  height: 16px;
+  vertical-align: text-bottom;
+  display: inline-block;
+
+  svg {
+    display: block;
+  }
 }
